src/objects/Violation__c.object
<CustomObject>
    <fields>
        <fullName>Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance</label>
        <referenceTo>Compliance__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_of_Violation__c</fullName>
        <label>Cost of Violation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Violation__c</fullName>
        <label>Date of Violation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe what happened in the violation</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Governance</label>
        <referenceTo>Governance__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Violation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Violation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>